--- a/index.html
+++ b/index.html
@@ -16,55 +16,55 @@
         </tr>
         <TR>
             <TD>MWEBESA JOHNSON</TD>
-            <TD></TD>
-            <TD></TD>
+            <TD>0754505088</TD>
+            <TD>mj@gmail.com</TD>
         </TR>
 
         <TR>
             <TD>NASIIMA RODDY</TD>
-            <TD></TD>
-            <TD></TD>
+            <TD>0702758060</TD>
+            <TD>miln@gmail.com</TD>
         </TR>
 
         <TR>
             <TD>AKAMPULIRA SHALLOT</TD>
-            <TD></TD>
-            <TD></TD>
+            <TD>0782664601</TD>
+            <TD>mom@gmail.com</TD>
         </TR>
         <TR>
             <TD>AYESIGYE PATIENCE</TD>
-            <TD></TD>
-            <TD></TD>
+            <TD>0702758060</TD>
+            <TD>pesh@gmail.com</TD>
         </TR>
         <TR>
             <TD>KAMANZI WILSON</TD>
-            <TD></TD>
-            <TD></TD>
+            <TD>0755684065</TD>
+            <TD>feather@gmail.com</TD>
         </TR>
         <TR>
             <TD>NYAMWIZA DIANA</TD>
-            <TD></TD>
-            <TD></TD>
+            <TD>0755684067</TD>
+            <TD>thony@gmail.com</TD>
         </TR>
         <TR>
             <TD>ABARINDE MONIC</TD>
-            <TD></TD>
-            <TD></TD>
+            <TD>0789746473</TD>
+            <TD>nj@gmail.com</TD>
         </TR>
         <TR>
             <TD>BANYANGIRAKI WILSON</TD>
-            <TD></TD>
-            <TD></TD>
+            <TD>076645363627</TD>
+            <TD>bmk@gmail.com</TD>
         </TR>
         <TR>
             <TD>MAMANZI WILSON</TD>
-            <TD></TD>
-            <TD></TD>
+            <TD>074473789</TD>
+            <TD>mam@gmail.com</TD>
         </TR>
         <TR>
             <TD>KATUSHABE ROMINET</TD>
-            <TD></TD>
-            <TD></TD>
+            <TD>0760736372</TD>
+            <TD>romi@gmail.com</TD>
         </TR>
         <TR>
             <TD>MJ</TD>
