--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         </TR>
         <TR>
             <TD>MJ</TD>
-            <TD></TD>
-            <TD></TD>
+            <TD>0789938839</TD>
+            <TD>mn@gmail.com</TD>
         </TR>
     </table>
 </CENTER>
