--- a/form.html
+++ b/form.html
@@ -11,31 +11,31 @@
     <left>
         <form margin="0" style="font-size: 160%;">
             <fr>
-                <fh>DATE</fh>
+                <fh>DATE</fh><br>
                 <fd><input type="date"></fd>
             </fr>
 
             <p><fr>
-                <fh>NAME</fr>
+                <fh>NAME</fr><br>
                 <fd><input type="name"></fd>
             </fr></p>
 
             <p><fr>
-                <fh>PHONE NUMBER</fr>
+                <fh>PHONE NUMBER</fr><br>
                 <fd><input type="number"></fd>
             </fr></p>
 
             <p><fr>
-                <fh>E-MAIL</fr>
+                <fh>E-MAIL</fr><br>
                 <fd><input type="email"></fd>
             </fr></p>
 
             <p><fr>
-                <fh>PASSWORD</fr>
+                <fh>PASSWORD</fr><br>
                 <fd><input type="password"></fd>
             </fr></p>
 
-            <p>How did you know about us</p>
+            <p>How did you know about us</p><br>
             <fr>
                 <fh>SOCIAL MEDIA</fh>
                 <fd><input type="checkbox"></fd>
