--- a/form.html
+++ b/form.html
@@ -15,10 +15,9 @@
                 <fd><input type="date"></fd>
             </fr>
 
-            <p><fr>
-                <fh>NAME</fr><br>
-                <fd><input type="name"></fd>
-            </fr></p>
+           <label for="name">NAME</label><br>
+                <input type="name"><br>
+            
 
             <p><fr>
                 <fh>PHONE NUMBER</fr><br>
