--- a/form.html
+++ b/form.html
@@ -9,7 +9,7 @@
 <body BGCOLOR="lightgray">
     <center><img src="OIP.jpg" role="button" class="nofocus"></center>
     <left>
-        <form margin="0" style="font-size: 160%;">
+        <form margin="0" style="font-size: 1.2vw;">
             <fr>
                 <fh>DATE</fh><br>
                 <fd><input type="date"></fd>
